#18 feat: 이메일 Service, Controller 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.application.name=food
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#??? ?? ??
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=urinane1004@gmail.com
+spring.mail.password=rlacsixiwpesrwbz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
