--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ ncp.storage.secretKey=ncp_iam_BPKSKRDvGKCqe9qDUYffS80Bh56yG4BNc1
 #file size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+#naver api
+naver.api.client-id=8l4oSIo0AefMdIGsMz4m
+naver.api.client-secret=BUWreWESDx
