--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ ncp.storage.region=kr-standard
 ncp.storage.endpoint=https://kr.object.ncloudstorage.com
 ncp.storage.accessKey=ncp_iam_BPASKR4csA9VuOEbWbFR
 ncp.storage.secretKey=ncp_iam_BPKSKRDvGKCqe9qDUYffS80Bh56yG4BNc1
-ncp.storage.localLocation=/Users/jang-yeongjae/Desktop/
+ncp.storage.localLocation=/
 cloud.aws.s3.bucket=contest23
 #file size
 spring.servlet.multipart.max-file-size=10MB
