--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'redis.clients:jedis:3.6.3'
     //aws 의존성
     implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.100'
