--- a/k8s/deployment-blue.yaml
+++ b/k8s/deployment-blue.yaml
@@ -1,24 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: contest23-food-server-deployment
+  name: contest23-food-server-deployment-blue
   labels:
     app: contest23-food-server
+    version: blue
 spec:
-  replicas: 3  # 컨테이너 인스턴스 개수
+  replicas: 3
   selector:
     matchLabels:
       app: contest23-food-server
+      version: blue
   template:
     metadata:
       labels:
         app: contest23-food-server
+        version: blue
     spec:
       containers:
         - name: contest23-food-server-container
-          image: contest23-server.kr.ncr.ntruss.com/contest23-server:latest  # 사용할 네이버 클라우드 컨테이너 레지스트리 이미지
+          image: contest23-server.kr.ncr.ntruss.com/contest23-server:latest  # 블루 서버 이미지
           ports:
-            - containerPort: 8080  # 컨테이너 내부 포트
+            - containerPort: 8080
           resources:
             requests:
               memory: "64Mi"
