--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,3 +26,5 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "500m"
+      imagePullSecrets:
+        - name: ncp-registry-secret
